@@ -64,10 +64,12 @@ Revision history for Perl extension Net::SSLeay.
     Fixed mionor typos in SSLeay.xs. Courtesy kmx.
     Moved documentation to new lib/Net/SSLeay.pod. Courtesy kmx.
     Additions to documentation in pod. Courtesy kmx.
-    Fixed for some incorrect return types from SSL_set_options
+    Fixed some incorrect return types from SSL_set_options
     SSL_CTX_set_options. Courtesy kmx.
     Further documentation in pod. Courtesy kmx.
-
+    Small fixes to XS code + one new trivial function SSL_CIPHER_get_name
+    And one more thing - 02_pod_coverage.t is turned ON passing all tests - 
+    never ever allow a new function without at least a short doc. Courtesy kmx.
 1.42	 2011-10-03
     Fixed incorrect documentation of how to enable CRL checking. Patched
     by Steffen_Ullrich.
